new style for references and download bibtex feature

--- a/marco.css
+++ b/marco.css
@@ -94,17 +94,26 @@ footer {
   clear: both;
 }
 
-/* Style the buttons */
-.btn {
-  border: none;
-  outline: none;
-  padding: 10px 16px;
-  background-color: #f1f1f1;
-  cursor: pointer;
-}
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+ }
 
-/* Style the active class (and buttons on mouse-over) */
-.active, .btn:hover {
-  background-color: #166B9C;
-  color: white;
-}
+ .tooltip .tooltiptext {
+	visibility: hidden;
+	width: 120px;
+	background-color: #555;
+	color: #fff;
+	text-align: center;
+	border-radius: 6px;
+	padding: 5px 0;
+
+	/* Position the tooltip */
+	position: absolute;
+	z-index: 1;
+ }
+
+ .tooltip:hover .tooltiptext {
+   visibility: visible;
+ }
