nav bar now fully transparent on scroll

--- a/marco.css
+++ b/marco.css
@@ -10,7 +10,7 @@
 #navbar {
   overflow: hidden;
   width: 100%;
-  background-color: #F0F0F0;
+  /*background-color: #F0F0F0;*/
   opacity: 0.6;
 }
 
