--- a/marco.css
+++ b/marco.css
@@ -95,6 +95,74 @@ footer {
   clear: both;
 }
 
+
+
+
+
+
+.circle {
+  height: 30px;
+  width: 30px;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+  background-color: gray;
+  padding: 7px;
+  margin: auto;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+.line-wrapper {
+  position: relative;
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+.horizontal, .vertical {
+  width: 100%;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 1);
+  pointer-events: none;
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+.vertical {
+  position: relative;
+  bottom: 2px;
+  transform: rotate(90deg);
+  
+}
+.circle:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.line-wrapper.open {
+  transform: rotate(180deg);
+}
+.vertical.open {
+  transform: rotate(180deg);
+}
+
+.content {
+  margin-top: 20px;
+  height: 0;
+  background: lightblue;
+/*   padding: 10px; */
+  overflow: hidden;
+/*   transform: scaleY(0);
+  transform-origin: top;
+  position: relative; */
+  transition: 0.3s ease;
+}
+.content-wrapper {
+  padding: 10px;
+/*   position: absolute;
+  top: 0;
+  left: 0; */
+}
+.content.open {
+  height: 500px;
+/*   transform: scaleY(1); */
+}
+
+
+
 /*
 .tooltip {
     position: relative;
